--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
   "readme": "https://pspdfkit.com/guides/web",
   "dependencies": {
     "drag-drop": "^4.2.0",
+    "pspdfkit": "https://customers.pspdfkit.com/npm/TRIAL-XCGHobOi-3r-P6dAjYW8slMV98IEaC5CQt2Pcdr3WQ2Op-jMkI2e771WARgdmsYE_M9iafZyzyd0nkIiaWdVPg/latest.tar.gz",
     "serve": "^10.0.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
-    "eslint": "^5.6.1",
+    "eslint": "^5.15.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.14.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.js",
